Finally get liblinear to work with documents and stuff